Update Camera of 3D Models

--- a/HTML/BMW-i8.html
+++ b/HTML/BMW-i8.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/bmw_i8.glb" shadow-intensity="1" camera-controls>
+  <model-viewer src="../3D-Models/bmw_i8.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
