IPFS Storage for Models

--- a/HTML/Bugatti.html
+++ b/HTML/Bugatti.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/bugatti.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeibm4shvjsxh3mk3ohvstmil3fjyhmhv4oxpb4q6l47qgd2hdxhf3i.ipfs.w3s.link/ipfs/bafybeibm4shvjsxh3mk3ohvstmil3fjyhmhv4oxpb4q6l47qgd2hdxhf3i/bugatti.glb shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
