--- a/HTML/Cliffs-Mercedes-V8.html
+++ b/HTML/Cliffs-Mercedes-V8.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/cliffs_mercedes_v8_biturbo.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeib4fqajd6gqu25qlmnz3qg3imk3sj5k5h34ir5kt7r3mpcgidzpee.ipfs.w3s.link/ipfs/bafybeib4fqajd6gqu25qlmnz3qg3imk3sj5k5h34ir5kt7r3mpcgidzpee/cliffs_mercedes_v8_biturbo.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
