--- a/HTML/Mclaren-Spider.html
+++ b/HTML/Mclaren-Spider.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/mclaren_spider.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeiav7vsssrsfo5ekytezfuciaqysnvl6yuj6xabdzdp5udcgq4xwkq.ipfs.w3s.link/ipfs/bafybeiav7vsssrsfo5ekytezfuciaqysnvl6yuj6xabdzdp5udcgq4xwkq/mclaren_spider.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
