--- a/HTML/Mercedes-Benz.html
+++ b/HTML/Mercedes-Benz.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/mercedes_benz.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeidyk36oit6kadyvrbb5yoyjamcvvb5wbd6vvssfitzmjnswcvadoq.ipfs.w3s.link/ipfs/bafybeidyk36oit6kadyvrbb5yoyjamcvvb5wbd6vvssfitzmjnswcvadoq/mercedes_benz.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
