--- a/HTML/Emerson-Fittipaldi-EF7.html
+++ b/HTML/Emerson-Fittipaldi-EF7.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/emerson_fittipaldi_ef7.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeidbzse3ht63sg5adnsbpnihdmw2h4zpda6vslove45nfqchsag63a.ipfs.w3s.link/ipfs/bafybeidbzse3ht63sg5adnsbpnihdmw2h4zpda6vslove45nfqchsag63a/emerson_fittipaldi_ef7.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
