--- a/HTML/Lamborghini-Ferzor.html
+++ b/HTML/Lamborghini-Ferzor.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="../3D-Models/lamborghini_ferzor.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeify7infux7bsgm6ckhwwqe53dr2xflbwc6nbxaczq3nhm6lii2dyy.ipfs.w3s.link/ipfs/bafybeify7infux7bsgm6ckhwwqe53dr2xflbwc6nbxaczq3nhm6lii2dyy/lamborghini_ferzor.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
