--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <!-- <model-viewer src="" shadow-intensity="1" camera-controls auto-rotate ar> -->
+  <model-viewer src="https://bafybeiewrzisa47tplzm4rs627haw4isqmnvggbjxud3tnu32zvbccf7vq.ipfs.w3s.link/ipfs/bafybeiewrzisa47tplzm4rs627haw4isqmnvggbjxud3tnu32zvbccf7vq/scene.gltf" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
