--- a/HTML/BMW-i8.html
+++ b/HTML/BMW-i8.html
@@ -35,7 +35,7 @@
     </div>
   </nav>
 
-  <model-viewer src="https://bafybeig37imuq5kqpkfl4htcl4exrikleutc6s4a5c526mmwlsunt5hsou.ipfs.w3s.link/ipfs/bafybeig37imuq5kqpkfl4htcl4exrikleutc6s4a5c526mmwlsunt5hsou/bmw_i8.glb" shadow-intensity="1" camera-controls auto-rotate ar>
+  <model-viewer src="https://bafybeihwwry5vgfoz2x6lq27rbye4u4hwg3e4wlpjxf4ttlyc3h3ddduqm.ipfs.w3s.link/ipfs/bafybeihwwry5vgfoz2x6lq27rbye4u4hwg3e4wlpjxf4ttlyc3h3ddduqm/parthcar%20gltf.glb" shadow-intensity="1" camera-controls auto-rotate ar>
 
   <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
   <script nomodule src="https://unpkg.com/@google/model-viewer/dist/model-viewer-legacy.js"></script>
